fixed segunda text nod bold fixed sexta buttons alignment

--- a/style.css
+++ b/style.css
@@ -846,7 +846,7 @@ input[type="submit"]:hover {
   margin-bottom: 40px;
 }
 
-.sexta-botões {
+.sexta-botoes {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -954,6 +954,11 @@ input[type="submit"]:hover {
     padding: 0;
   }
 
+  .segunda-texto h1,
+  .segunda-texto h2 {
+    font-weight: 700;
+  }
+
   .slideshow {
     display: none;
   }
@@ -1012,6 +1017,22 @@ input[type="submit"]:hover {
     width: 90%;
     display: flex;
     flex-direction: column;
+  }
+  .sexta-texto {
+    padding:0;
+    padding-top: 20px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .sexta-botoes {
+    justify-content: space-between;
+  }
+
+  .botoes {
+    margin: 0 0 0 3px;
   }
 
   .sexta-texto,
